# recomender

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  Dockerfile.grpc  Makefile  README.md  SUMMARY.md  Untitled1.ipynb  __init.py  docker-compose.yaml  docker-compose.yml  entrypoint.sh  grpc_server.py  main.py  models.py  pyarmor_config.py  pyproject.toml  requirements.txt  schemas.py  setup.py
.ipynb_checkpoints/: Untitled1-checkpoint.ipynb
core/: config.py  database.py
data/: test.ipynb
data/.ipynb_checkpoints/: test-checkpoint.ipynb
external_db/: data_service.py  db_connecter.py  models.py
grpcs/mappers/: rec_mappers.py
grpcs/protos/: rec.proto  rec_pb2.py  rec_pb2_grpc.py
grpcs/services/: data_preparer.py  grpc_server.py  rec.py
internal/: app.py  constants.py  models.py  repositories.py  services.py  types.py
internal/config/: db_connecter.py  docker-compose.yaml  init-mongo.js  mongo_adapter.py
internal/middleware/: error_handler.py  logging_middleware.py
internal/utils/: error_handler.py  external_data_mapper.py  field_mapping.py
model/: dataset.pkl  model.csv
recomendations/: rec_server.py  rec_service.py
recomendations/protos/: recommendations_pb2_grpc.py
recommendations/: Dockerfile  README.md  auth.py  cache_service.py  client_example.py  config.py  data_preparer.py  main.py  model_registry.py  monitoring.py  rec_server.py  rec_service.py  requirements.txt  schedular.py
recommendations/config/: config.py
recommendations/core/: __init__.py
recommendations/core/fast_ranker/: __init__.py  ranker.py
recommendations/core/messaging/: __init__.py  consumer.py  message.py  producer.py
recommendations/proto/: recommendation_service.proto
recommendations/protos/: recommendations.proto  recommendations_pb2.py  recommendations_pb2.pyi  recommendations_pb2_grpc.py
recommendations/workers/: __init__.py  batch_updater.py
src/routes/: admin_routes.py  recommendation_routes.py
src/services/: configuration_service.py
utils/: age_group.py  cat_chapters.py  pandas.py
