[project]
name = "recomender"
version = "0.1.0"
description = "рек система для жкосиэкосистемы рекомкс"
authors = [
    {name = "cocktail"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic-settings (>=2.7.1,<2.8.0)",
    "numpy (>=1.26.4,<1.27.0)",
    "lightfm @ git+https://github.com/daviddavo/lightfm",
    "fastapi (>=0.115.7,<0.116.0)",
    "sqlalchemy (>=2.0.37,<2.1.0)",
    "python-dotenv (>=1.0.1,<1.1.0)",
    "pandas (>=2.2.3,<2.3.0)",
    "protobuf (>=5.29.3,<5.30.0)",
    "grpcio (>=1.70.0,<1.71.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "threadpoolctl (>=3.5.0,<3.6.0)",
    "implicit (>=0.7.2,<0.8.0)",
    "pytest (>=8.2.0,<8.3.0)",
    "h11 (>=0.14.0,<0.15.0)",
    "pip (>=25.0,<26.0)",
    "attrs (>=23.2.0,<23.3.0)",

    "build (>=1.2.2.post1,<1.3.0)",
    "wheel (>=0.41.2,<0.42.0)",
    "cryptography (>=42.0.5,<42.1.0)",
    "jinja2 (>=3.1.4,<3.2.0)",
    "keyring (>=25.6.0,<25.7.0)",
    "pytz (>=2024.1,<2025.0)",
    "requests (>=2.31.0,<2.32.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "typing-extensions (>=4.12.2,<4.13.0)",
    "sniffio (>=1.3.1,<1.4.0)",
    "setuptools (>=68.2.0,<68.3.0)",
    "charset-normalizer (>=3.3.2,<3.4.0)",
    "cffi (>=1.16.0,<1.17.0)",
    "mypy (>=1.10.0,<1.11.0)",
    "packaging (>=24.0,<25.0)",
    "platformdirs (>=4.3.6,<4.4.0)",
    "click (>=8.1.7,<8.2.0)",
    "joblib (>=1.4.2,<1.5.0)",
    "markupsafe (>=2.1.5,<2.2.0)",
    "python-dateutil (>=2.9.0.post0,<2.10.0)",
    "certifi (>=2024.2.2,<2024.3.0)",
    "starlette (>=0.45.3,<0.46.0)",
    "email-validator (>=2.1.1,<2.2.0)",
    "pydantic (>=2.10.6,<2.11.0)",
    "pydantic-core (>=2.27.2,<2.28.0)",
    "websockets (>=12.0,<13.0)",
    "anyio (>=3.7.1,<3.8.0)",
    "orjson (>=3.10.10,<3.11.0)",
    "scikit-learn (>=1.6.1,<1.7.0)",
    "urllib3 (>=2.2.1,<2.3.0)",
    "httptools (>=0.6.1,<0.7.0)",
    "watchfiles (>=0.21.0,<0.22.0)",
    "six (>=1.16.0,<1.17.0)",
    "tqdm (>=4.67.1,<4.68.0)",
    "annotated-types (>=0.6.0,<0.7.0)",
    "typeguard (>=4.4.1,<4.5.0)",
    "idna (>=3.7,<4.0)",
    "pyyaml (>=6.0.1,<6.1.0)",
    "httpx (>=0.27.0,<0.28.0)",
    "importlib-metadata (>=8.5.0,<8.6.0)",
    "rectools[lightfm] (>=0.13.0,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
